Fix warnings from Java 9